# kinova-ros

./: .gitignore  CMakeLists.txt  Example  LICENSE  README.md  README.txt  Rename-note.txt  mainpage.dox  manifest.xml  package.xml  stack.xml
jaco_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
jaco_demo/launch/: admittance_ctrl.launch
jaco_demo/nodes/: cartesian_workout.py  goal_generators.py  grip_workout.py  joint_angle_workout.py
jaco_driver/: .gitignore  CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
jaco_driver/action/: ArmPose.action  SetFingersPosition.action  SetJointAngles.action  arm_pose.action  set_finger_position.action
jaco_driver/cfg/: JacoDriverConfig.cfg  JacoPositionConfig.cfg  JacoVelocityConfig.cfg
jaco_driver/devel/: .catkin  .rosinstall  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
jaco_driver/docs/: JacoPositionConfig-usage.dox  JacoPositionConfig.wikidoc  JacoVelocityConfig-usage.dox  JacoVelocityConfig.dox  JacoVelocityConfig.wikidoc
jaco_driver/gtest/: Makefile
jaco_driver/launch/: arm.launch  gostorage.launch  jaco_arm.launch  mico_arm.launch
jaco_driver/msg/: FingerPosition.msg  JointAngles.msg  SoftwareStop.msg  software_pause.msg  zero_arm.msg
jaco_driver/src/: goStorage.cpp  jaco_action.cpp  jaco_angles_action.cpp  jaco_api.cpp  jaco_arm.cpp  jaco_arm_kinematics.cpp  jaco_comm.cpp  jaco_fingers_action.cpp  jaco_gripper_action_server.cpp  jaco_ik_solver.cpp  jaco_kinematic_controller.cpp  jaco_mpc_controller.cpp  jaco_pose_action.cpp  jaco_qp_solver.cpp  jaco_trajectory_action.cpp  jaco_trajectory_angles_action.cpp  jaco_types.cpp  jacolib.cpp  joystick_command_translator.cpp
jaco_driver/srv/: Estart.srv  Estop.srv
jaco_driver/test/: angle_action_client.py  finger_action_client.py  pose_action_client.py
jaco_gazebo/: CMakeLists.txt  README.md  package.xml  setup.py
jaco_gazebo/config/: jaco_control.yaml  mico_control.yaml
jaco_gazebo/launch/: gazebo.launch  grasping_scenario.launch  jaco_arm_control.launch  mico_arm_control.launch  mico_control.launch  mico_on_table.launch  mico_on_table_spawn.launch  mico_sim_world.launch  mico_spawn.launch  robot_spawn.launch
jaco_gazebo/scripts/: gripper_action_client.py  gripper_action_client_real_mico.py  gripper_action_server.py  jaco_gazebo_follow_trajectory_action_server.py  joints_set_gazebo.py
jaco_gazebo/src/: mimic_plugin.cpp
jaco_gazebo/worlds/: 3boxes_room.world  empty.world  table_kinect_and_objects.world  table_kinect_and_plastic_cup.world  tum_kitchen.world
jaco_model/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
jaco_model/config/: jaco.srdf  joint_limits.yaml  ompl_planning.yaml
jaco_model/launch/: default_warehouse_db.launch  demo.launch  display.launch  display_jaco.launch  display_mico.launch  jaco_moveit_controller_manager.launch  micoViz.rviz  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch  planning_context.launch  planning_pipeline.launch  run_benchmark_ompl.launch  sensor_manager.launch  setup_assistant.launch  trajectory_execution.launch  upload_mico.launch  upload_standalone_arm.launch  warehouse.launch
jaco_model/meshes/: Gripper.STL  Gripper_fixed.stl  Gripper_origin.STL  Link1.STL  Link2.STL  Link3.STL  Link4.STL  Link4_origin.STL  Link5.STL  Link5_origin.STL  base_link.STL  finger_distal_limb_1.dae  finger_proximal_limb_1.dae  finger_proximal_limb_2.dae  jaco_link_hand.dae  link_2.STL  link_3.dae  link_4.dae  link_base.STL  link_base.dae  mico_link_1.dae  mico_link_2.dae  mico_link_3.dae  mico_link_4.dae  mico_link_5.dae  mico_link_base.dae  mico_link_hand.dae  origin_fixed.STL
jaco_model/urdf/: aero_arm.urdf  aero_arm.urdf.xacro  jaco_arm.xacro  jaco_common.xacro  jaco_model.urdf  jaco_transmission_friction.xacro  mico_arm.xacro  mico_on_table_gazebo.xacro  standalone_arm.urdf  standalone_arm.xacro  standalone_jaco_arm_gazebo.xacro  standalone_mico.xacro  standalone_mico_arm_gazebo.xacro
jaco_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
jaco_teleop/: CMakeLists.txt  README.md  package.xml  setup.py
jaco_teleop/config/: logitech_f710_directinput.yaml  logitech_f710_xinput.yaml  readme.yaml
jaco_teleop/launch/: jaco_teleop.launch
jaco_teleop/nodes/: jaco_teleop_joy.py
kinova_control/: CMakeLists.txt  package.xml
kinova_control/config/: generate_controller_config.py  j2n6s300_control.yaml  j2n7s300_control.yaml  j2s6s200_control.yaml  j2s6s300_control.yaml  j2s7s200_control.yaml  j2s7s300_control.yaml  kinova_control.yaml  m1n6s200_control.yaml  m1n6s300_control.yaml
kinova_control/launch/: j2n6s300.perspective  j2s7s300.perspective  kinova_control.launch  kinova_rqt.launch  m1n6s200.perspective  tune_m1n6s300.perspective
kinova_control/src/: move_robot.py
kinova_demo/: CMakeLists.txt  package.xml  setup.py
kinova_demo/launch/: admittance_ctrl.launch
kinova_description/: CMakeLists.txt  package.xml
kinova_description/launch/: display_j2_4n_3.launch  display_j2_6n_3.launch  display_j2_6s_3.launch  display_j2_7n_3.launch  display_j2_7s_3.launch  display_j2n4a300.launch  display_j2n6a300.launch  display_j2n7_3.launch  display_j2s6a300.launch  display_j2s7s300.launch  display_jaco.launch  display_jaco2.launch  display_kinova_robot.launch  display_m1_4n_2.launch  display_m1_6n_2.launch  display_m1n4a200.launch  display_m1n6s200.launch  display_mico.launch  mico_rviz.launch  test.launch  upload_jaco.launch  upload_jaco2.launch  upload_mico.launch
kinova_description/meshes/: finger_proximal_limb_1.dae  jaco2_link_1.dae  jaco2_link_2.dae  jaco2_link_3.dae  jaco2_link_4.dae  jaco2_link_5.dae  jaco2_link_base.dae  jaco2_link_hand.dae  mico_link_1.dae  mico_link_2.dae  mico_link_hand.dae
kinova_description/urdf/: j2_4n_3.xacro  j2_4n_3_standalone.xacro  j2_6n_3.xacro  j2_6n_3_standalone.xacro  j2_6s_3.xacro  j2_6s_3_standalone.xacro  j2_7n_3.xacro  (+87 more)
kinova_driver/: CMakeLists.txt  package.xml
kinova_gazebo/: CMakeLists.txt  Gazebo.md  README.md  package.xml
kinova_msgs/: CMakeLists.txt  package.xml
(+8468 files in other folders)
