<?xml version="1.0"?>
<package>
  <name>jaco_driver</name>
  <version>0.0.1</version>
  <description>
          The ROS JACO Arm stack provides a ROS interface for the Kinova Robotics
          JACO robotic manipulator arm. This stack provides access to the Kinova
          JACO C++ hardware API through ROS.
  </description>

  <author email="ibaranov@clearpathrobotics.com">Ilia Baranov (Clearpath)</author>
  <author email="jschmidt@clearpathrobotics.com">Jeff Schmidt (Clearpath)</author>
  <author email="abencz@clearpathrobotics.com">Alex Bencz (Clearpath)</author>
  <author>Matt DeDonato (WPI)</author>
  <author email="braden@stenning.com">Braden Stenning</author>
  <maintainer email="ibaranov@clearpathrobotics.com">Ilia Baranov (Clearpath)</maintainer>
  <license>BSD</license>

  <url>http://wiki.ros.org/jaco</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>jaco_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>angles</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>jaco_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>angles</run_depend>

  <export>
  </export>
</package>
