<?xml version="1.0"?>
<package>
  <name>jaco_teleop</name>
  <version>1.0.0</version>
  <description>
    <h1>Teleoperation support for Jaco arm.</h1>

    <p>To run the teleoperation node, type simply</p>
    <pre><code>roslaunch jaco_teleop jaco_teleop.launch</code></pre>
    <p>or </p>
    <pre><code>roslaunch jaco_teleop jaco_teleop.launch joystick_type:=xbox_360</code></pre>
    <p>if you have the appropriate YAML config file in the <code>config</code> directory (in this example <code>config/xbox_360.yaml</code>). </p>

    <p>Launching <code>jaco_teleop.launch</code> assumes that <code>jaco_driver/jaco_arm.launch</code> has already been running.</p>
    <p>This node simply remaps gamepad commands to the Jaco dedicated controller commands. Using the default gamepad config, the gamepad is assumed to have two analog joysticks (they produce float values), 4 digital buttons (their output is 0/1) on the left (the cross), 4 digital buttons on the right (ABCD or 1234), two digital buttons on the back side, two analog buttons on the back side, and 4 digital buttons on the &quot;front panel&quot; (Start, Back, Mode, Vibration). Some joysticks can be switched to two modes - in one of them, all 4 back buttons are digital, and in the other one, two of the back buttons are analog. This node needs the analog mode to be set (when using the default gamepad config).</p>

    <h2>Default controls remapping (Logitech F710):</h2>
    <code><xmp><![CDATA[Thanks to RIVeR-Lab/wpi_jaco for base of this image

               Controls                
    up/down                 rotate wrist
   ________                 __________    
  /fin.open\_______________/          \   
 |   _| |_    < >  < home >     (4)    |  
 |  |_   _|   < >    < >     (1)   (3) |  
 |    |_|    ___       ___      (2)    |  
 | fin.close/   \     /   \            |  
 |          \___/     \___/            |  
 |       x/y trans  rotate x/y         |  
 |        _______/---\_______          |  
 |       |                    \        |  
  \      /                     \      /   
   \____/                       \____/    

Buttons:                               
  (1) Fingers open
  (2) Fingers close
  (3) Emergency stop                    
  (4) Emergency release]]></xmp></code>

    <h2>Contributing</h2>
    <p>If you write your own YAML config for another controller, feel free to fork this repo and place a merge request.</p>	
  </description>

  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>
  <license>BSD</license>
  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>jaco_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>jaco_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>topic_tools</run_depend>


  <export>
  </export>
</package>
