<?xml version="1.0"?>
<package>
  <name>kinova_control</name>
  <version>0.0.0</version>
  <description>The kinova_control package</description>

  <maintainer email="soli@kinova.ca">Siddharth Oli</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/Kinovarobotics/kinova-ros</url>
  <url type="repository">https://github.com/Kinovarobotics/kinova-ros</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <run_depend>rqt_gui</run_depend>
  <run_depend>effort_controllers</run_depend>


  <export>
  </export>

</package>
